--- a/styles.css
+++ b/styles.css
@@ -12,19 +12,15 @@ body {
 
 #card {
     
-    width: 100%;
+    width: 700px;
 	background: #fff;
 	position: relative;
     margin-left: 26%;
     margin-top: 6%;
-    box-sizing: border-box;
-    max-width: 700px;
-    border-radius: 10px;
 
 }
 
 .title {
-    text-align: center;
     display: flex;
     justify-content: center; 
     color: #e9ecfb;
@@ -33,7 +29,8 @@ body {
 }
 
 .title h1 {
-    margin: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .city-selected {
